add book.findById
